# docs/swagger.yaml
@@ -1855,13 +1855,11 @@ paths:
         in: query
         name: createBy
         type: string
-      - default: '"createdAt"'
-        description: orderBy field name
+      - description: orderBy (can be comma-separated)
         in: query
         name: orderBy
         type: string
-      - default: '"DESC"'
-        description: direction ASC or DESC
+      - description: direction (can be comma-separated)
         in: query
         name: direction
         type: string
@@ -1972,6 +1970,69 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Create Case
+      tags:
+      - Cases
+  /api/v1/case/caseId/{caseId}:
+    get:
+      consumes:
+      - application/json
+      operationId: CaseData By CaseId
+      parameters:
+      - description: caseId
+        in: path
+        name: caseId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK - Request successful
+          schema:
+            $ref: '#/definitions/model.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Response'
+        "404":
+          description: Case not found
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Cases By CaseId
+      tags:
+      - Cases
+  /api/v1/case/result:
+    get:
+      consumes:
+      - application/json
+      operationId: CaseResult
+      parameters:
+      - default: 0
+        description: start
+        in: query
+        name: start
+        type: integer
+      - default: 10
+        description: length
+        in: query
+        name: length
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK - Request successful
+          schema:
+            $ref: '#/definitions/model.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: List CasesResult
       tags:
       - Cases
   /api/v1/case_history:
@@ -2223,69 +2284,6 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Create Case Status
-      tags:
-      - Cases
-  /api/v1/caseId/{caseId}:
-    get:
-      consumes:
-      - application/json
-      operationId: CaseData By CaseId
-      parameters:
-      - description: caseId
-        in: path
-        name: caseId
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK - Request successful
-          schema:
-            $ref: '#/definitions/model.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/model.Response'
-        "404":
-          description: Case not found
-          schema:
-            $ref: '#/definitions/model.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/model.Response'
-      security:
-      - ApiKeyAuth: []
-      summary: Cases By CaseId
-      tags:
-      - Cases
-  /api/v1/caseResult:
-    get:
-      consumes:
-      - application/json
-      operationId: CaseResult
-      parameters:
-      - default: 0
-        description: start
-        in: query
-        name: start
-        type: integer
-      - default: 10
-        description: length
-        in: query
-        name: length
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK - Request successful
-          schema:
-            $ref: '#/definitions/model.Response'
-      security:
-      - ApiKeyAuth: []
-      summary: List CasesResult
       tags:
       - Cases
   /api/v1/casesubtypes:
@@ -5042,7 +5040,7 @@ paths:
       - ApiKeyAuth: []
       summary: Get Skill
       tags:
-      - User
+      - User Skills
   /api/v1/skill/{id}:
     delete:
       consumes:
@@ -5053,7 +5051,7 @@ paths:
         in: path
         name: id
         required: true
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
@@ -5065,7 +5063,7 @@ paths:
       - ApiKeyAuth: []
       summary: Delete Skill
       tags:
-      - User
+      - User Skills
     get:
       consumes:
       - application/json
@@ -5087,7 +5085,7 @@ paths:
       - ApiKeyAuth: []
       summary: Get Skill by ID
       tags:
-      - User
+      - User Skills
     patch:
       consumes:
       - application/json
@@ -5097,7 +5095,7 @@ paths:
         in: path
         name: id
         required: true
-        type: integer
+        type: string
       - description: Update data
         in: body
         name: Body
@@ -5115,7 +5113,7 @@ paths:
       - ApiKeyAuth: []
       summary: Update Skill
       tags:
-      - User
+      - User Skills
   /api/v1/skill/add:
     post:
       consumes:
@@ -5139,7 +5137,7 @@ paths:
       - ApiKeyAuth: []
       summary: Create Skill
       tags:
-      - User
+      - User Skills
   /api/v1/stations:
     get:
       consumes:
@@ -5550,6 +5548,29 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Update User By Username
+      tags:
+      - User
+  /api/v1/users/username/ForCaseInfo/{username}:
+    get:
+      consumes:
+      - application/json
+      operationId: Get User by username for CaseInfo
+      parameters:
+      - description: username
+        in: path
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK - Request successful
+          schema:
+            $ref: '#/definitions/model.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get User by username for CaseInfo
       tags:
       - User
   /api/v1/users_with_contacts:
